CPL/Tema3/tema3-tests/methods.lcpl.err
llc: methods.lcpl.ir:151:1: error: expected instruction opcode
L1:
^
clang: error: no such file or directory: 'methods.lcpl.ir.s'
./eval.sh: line 27: ./methods: No such file or directory
rm: cannot remove `methods': No such file or directory
